--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "quick-test-example",
+  "version": "1.0.0",
+  "main": "app.js",
   "dependencies": {
     "@slack/bolt": "^3.12.2",
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "env-cmd mocha"
   }
 }
