--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
   },
   "scripts": {
     "start": "node app.js",
-    "test": "env-cmd mocha"
+    "test": "mocha",
+    "test-with-coverage": "nyc --reporter=html --reporter=text mocha"
   }
 }
